Bug 819953 - Continue to process queue on thumbnail capturing failures. r=kats